--- a/index.html
+++ b/index.html
@@ -4,65 +4,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lalu Kumar Sen - वकील</title>
-    <style>
-        body {
-            font-family: 'Segoe UI', sans-serif;
-            background-color: #f5f5f5;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-        }
-        header {
-            background-color: #2c3e50;
-            color: white;
-            padding: 20px 10px;
-        }
-        h1 {
-            margin: 0;
-        }
-        .slogan {
-            font-style: italic;
-            margin-top: 10px;
-            color: #f1c40f;
-        }
-        section {
-            padding: 20px;
-        }
-        .contact, .services {
-            margin-top: 20px;
-        }
-        .whatsapp-button {
-            background-color: #25D366;
-            color: white;
-            padding: 15px 25px;
-            border: none;
-            border-radius: 30px;
-            font-size: 18px;
-            cursor: pointer;
-            text-decoration: none;
-            display: inline-block;
-            margin-top: 30px;
-        }
-    </style>
+    <title>लालू कुमार सेन - अधिवक्ता</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Lalu Kumar Sen</h1>
-        <p class="slogan">"धर्मो रक्षति रक्षितः"</p>
-        <p>वकील एवं समाजसेवी</p>
+        <h1>लालू कुमार सेन</h1>
+        <p>मोबाइल: 9179963619</p>
+        <p class="sanskrit">"धर्मो रक्षति रक्षितः"</p>
     </header>
-    <section>
-        <div class="services">
-            <h2>सेवाएं</h2>
-            <p>⚖ विधिक परामर्श</p>
-            <p>🌿 समाज सेवा से जुड़ाव</p>
-        </div>
-        <div class="contact">
-            <h2>संपर्क करें</h2>
-            <p>📞 मोबाइल: 9179963619</p>
-        </div>
-        <a class="whatsapp-button" href="https://wa.me/919179963619" target="_blank">व्हाट्सएप पर संपर्क करें</a>
+    <section class="photo">
+        <img src="lalu-photo.jpg" alt="लालू कुमार सेन">
     </section>
+    <section class="gallery">
+        <h2>फोटो गैलरी</h2>
+        <div class="gallery-images">
+            <img src="court1.jpg" alt="Court Image 1">
+            <img src="court2.jpg" alt="Court Image 2">
+        </div>
+    </section>
+    <section class="services">
+        <h2>सेवाएँ</h2>
+        <ul>
+            <li>दीवानी एवं आपराधिक मुकदमे</li>
+            <li>राजस्व व संपत्ति संबंधित परामर्श</li>
+            <li>समाज सेवा में विधिक सहायता</li>
+        </ul>
+    </section>
+    <footer>
+        <a href="https://wa.me/919179963619" class="whatsapp-button">WhatsApp पर संपर्क करें</a>
+    </footer>
 </body>
 </html>
